MLS key packages (#2102)
* Add key package table

* Key package upload endpoint

* Key package validation

* Parse and validate extensions

* Add MLS media type

* Improve MLS key package Swagger

* Compute and store key package refs

* Add endpoint for claiming key packages

* Add key package count endpoint

* Validate key package lifetimes

* Verify key package signatures

* Key package upload test

* Unit tests for key package validation functions

* Unit test KeyPackage extension parsing

* Fix key package integration test

* Add key package count test

* Test key package claim endpoint

* Validate key package protocol version

* Add nginz routes for MLS endpoints

* Upgrade nixpkgs

* Add crypto-cli to direnv

* Document key package lifetime option

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -36,6 +36,12 @@ library
       Wire.API.Event.Team
       Wire.API.Message
       Wire.API.Message.Proto
+      Wire.API.MLS.CipherSuite
+      Wire.API.MLS.Credential
+      Wire.API.MLS.KeyPackage
+      Wire.API.MLS.Proposal
+      Wire.API.MLS.Serialisation
+      Wire.API.MLS.Servant
       Wire.API.Notification
       Wire.API.Properties
       Wire.API.Provider
@@ -153,6 +159,7 @@ library
     , base ==4.*
     , base64-bytestring >=1.0
     , binary
+    , binary-parsers
     , bytestring >=0.9
     , bytestring-conversion >=0.2
     , case-insensitive
@@ -161,6 +168,7 @@ library
     , cereal
     , comonad
     , conduit
+    , constraints
     , containers >=0.5
     , cookie
     , cryptonite
@@ -566,6 +574,7 @@ test-suite wire-api-tests
   other-modules:
       Test.Wire.API.Call.Config
       Test.Wire.API.Conversation
+      Test.Wire.API.MLS
       Test.Wire.API.Roundtrip.Aeson
       Test.Wire.API.Roundtrip.ByteString
       Test.Wire.API.Roundtrip.CSV
@@ -635,6 +644,7 @@ test-suite wire-api-tests
     , currency-codes
     , directory
     , filepath
+    , hex
     , hscim
     , imports
     , iso3166-country-codes
