provide a default cabal project file default through direnv

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,11 @@
 env=$(nix-build --no-out-link "$PWD/direnv.nix")
 PATH_add "${env}/bin"
 
+if [[ -f cabal.project.local-custom ]]; then
+    cp cabal.project.local-custom cabal.project.local
+else
+    cp cabal.project.local-default cabal.project.local
+fi
+
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
