Refactor broadcast tests
This uses a record to organise arguments for the helper function.

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -408,6 +408,7 @@ executable galley-integration
     , containers
     , cookie
     , currency-codes
+    , data-default
     , data-timeout
     , errors
     , exceptions
