Generalise broadcast route in nginz configuration

--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -336,8 +336,8 @@ http {
         proxy_pass http://galley;
     }
 
-    location /broadcast/otr/messages {
-      include common_response_with_zauth.conf;
+    location /broadcast {
+      include common_response_no_zauth.conf;
       proxy_pass http://galley;
     }
 
