--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -316,7 +316,7 @@ nginx_conf:
       - all
       max_body_size: 40m
       body_buffer_size: 256k
-    - path: /broadcast/otr/messages
+    - path: /broadcast
       envs:
       - all
       max_body_size: 40m
