--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -624,6 +624,7 @@ executable brig-schema
       V66_PersonalFeatureConfCallInit
       V67_MLSKeyPackages
       V68_AddMLSPublicKeys
+      V69_MLSKeyPackageRefMapping
       V9
       Paths_brig
   hs-source-dirs:
