WIP: allow specifying connection mode for redis

--- a/charts/gundeck/templates/configmap.yaml
+++ b/charts/gundeck/templates/configmap.yaml
@@ -21,6 +21,7 @@ data:
     redis:
       host: {{ .redis.host }}
       port: {{ .redis.port }}
+      connectionMode: {{ .redis.connectionMode }}
 
     # Gundeck uses discovery for AWS access key / secrets
     # For more details, check amazonka's documentation at:
