--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -19,6 +19,7 @@ config:
   redis:
     host: redis-ephemeral-master
     port: 6379
+    connectionMode: "normal"
   bulkPush: false
   aws:
     region: "eu-west-1"
