Dereference key packages in welcome messages

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -187,6 +187,7 @@ library
     , cassandra-util >=0.16.2
     , cassava >=0.5.2
     , cereal >=0.4
+    , comonad
     , containers >=0.5
     , cryptonite
     , currency-codes >=2.0
