Add qualified broadcast endpoint (#2166)
* Add qualified broadcast endpoint

* Refactor broadcast tests

This uses a record to organise arguments for the helper function.

* Add qualified broadcast tests

* Fix mismatch assertions in broadcast tests

* Generalise broadcast route in nginz configuration

* Add release note entry

* Restore authentication for broadcast in demo nginz

* Remove redundant use of `runLocalInput`

* Rename broadcast tests

--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -336,7 +336,7 @@ http {
         proxy_pass http://galley;
     }
 
-    location /broadcast/otr/messages {
+    location /broadcast {
       include common_response_with_zauth.conf;
       proxy_pass http://galley;
     }
