--- a/services/gundeck/gundeck.integration.yaml
+++ b/services/gundeck/gundeck.integration.yaml
@@ -12,7 +12,7 @@ cassandra:
 redis:
   host: 127.0.0.1
   port: 6379
-  connectionMode: normal # normal | sentinel | clustered
+  connectionMode: "master" # master | sentinel | cluster
 
 aws:
   queueName: integration-gundeck-events
