--- a/package-defaults.yaml
+++ b/package-defaults.yaml
@@ -4,6 +4,7 @@ ghc-options:
 - -Wincomplete-uni-patterns
 - -Wincomplete-record-updates
 - -Wpartial-fields
+- -Wredundant-constraints
 - -fwarn-tabs
 # These errors pop up from time to time but haven't caused any serious trouble yet
 - -optP-Wno-nonportable-include-path
